objects/GenAIFeedback__dll.object
<CustomObject>
    <fields>
        <fullName>KQ_feedbackId__c</fullName>
        <label>KQ_feedbackId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_generationId__c</fullName>
        <label>KQ_generationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_generationUpdateId__c</fullName>
        <label>KQ_generationUpdateId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>action__c</fullName>
        <label>action</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appType__c</fullName>
        <label>appType</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature__c</fullName>
        <label>feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feedbackId__c</fullName>
        <label>feedbackId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feedback__c</fullName>
        <label>feedback</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationGroupId__c</fullName>
        <label>generationGroupId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationId__c</fullName>
        <label>generationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationUpdateId__c</fullName>
        <label>generationUpdateId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>orgId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <label>source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>userId__c</fullName>
        <label>userId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>